# elasticlave-dac-tutorial

./: .gitmodules  CMakeLists.txt  README.md  make  run
scripts/: build  docker-run  qemu-run
tut1/: CMakeLists.txt
tut1/encl/: hello.c
tut1/host/: host.cpp
tut2/: CMakeLists.txt
tut2/enclaves/: client.c  server.c
tut2/host/: host.cpp
tut3/: CMakeLists.txt
tut3/encl/: hello.c
tut3/host/: host.cpp
tut4/: CMakeLists.txt
tut4/enclaves/: client.c  server.c
tut4/host/: host.cpp
